Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56841

REG: Text looks broken in high-dpi

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.8.0 RC
    • 5.8.0 Beta
    • GUI: Text handling
    • None
    • 1ba0cfab308fff363973c3a15aa7f52908edf7af

      When running Qt Creator on Windows in the latest Qt 5.8.0 beta package, all the text looks busted. It looks like we are scaling to high-dpi but not disabling hinting on the text, so the text layouts are mangled and everything looks awful.

      Look at the brokencreator.png screenshot for a comparison with Qt Creator running on Qt 5.7.0. Look at e.g. the word "enabled" for a clear illustration of the problem.

        For Gerrit Dashboard: QTBUG-56841
        # Subject Branch Project Status CR V

            esabraha Eskil Abrahamsen Blomfeldt
            esabraha Eskil Abrahamsen Blomfeldt
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes